--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.guide_way">
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+   
    <application
         android:label="GuideWay"
         android:name="${applicationName}"
@@ -30,5 +33,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyBaFFUBnkNHtdnGSbwNwJ2yVaAKQR5b2js"/>
     </application>
 </manifest>
