--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             </intent-filter>
             <intent-filter>
               <action android:name="android.intent.action.VIEW" />
-              <category android:name="android.intent.category.DEFAULT" />
+              <category android:namep="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
               <!-- Accepts URIs that begin with "example://gizmos” -->
               <!-- Registered Callback URLs in TwitterApp -->
