--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # FIrebae
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
+
+  # Google SignIN
+  google_sign_in: ^6.1.2
+
+  # Facebook Auth
+  flutter_facebook_auth: ^5.0.11
+
+  # Twitter Login
+  twitter_login: ^4.4.0
+
   # Google Fonts
   google_fonts: ^4.0.4
 
@@ -55,7 +69,11 @@ dependencies:
 
   # PDF Viewer
   syncfusion_flutter_pdfviewer: ^21.2.6
+  
+  # Carousel Slider
   carousel_slider: ^4.2.1
+
+  rename: ^2.1.1
 
 dev_dependencies:
   flutter_test:
