--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shaheendev.guide_way">
+    package="com.example.guide_way">
     
     <uses-permission android:name="android.permission.INTERNET" />
    
@@ -29,11 +29,11 @@
             </intent-filter>
             <intent-filter>
               <action android:name="android.intent.action.VIEW" />
-              <category android:namep="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
               <!-- Accepts URIs that begin with "example://gizmos” -->
               <!-- Registered Callback URLs in TwitterApp -->
-              <data android:scheme="GuideWay://"/>
+              <data android:scheme="guideway"/>
             </intent-filter>
         </activity>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
