--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # HTTP
+  http:
+
   # FIrebae
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
@@ -74,6 +77,12 @@ dependencies:
   carousel_slider: ^4.2.1
 
   rename: ^2.1.1
+
+  # Google ML Kit
+  google_mlkit_text_recognition: ^0.7.0
+
+  # Search Dropdown
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
