New dependency added | Intl

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # HTTP
   http:
 
+  # Date Formatter
+  intl: ^0.18.1
+
   # FIrebae
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
