New dependecy added | Flutter Qibla

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
 
   # Search Dropdown
   dropdown_search: ^5.0.6
+  flutter_qiblah: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -125,6 +126,8 @@ flutter:
   - assets/icons/
   - assets/images/
   - assets/documents/
+  - assets/weather_icons/day/
+  - assets/weather_icons/night/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
