--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,19 @@ dependencies:
   # Date Formatter
   intl: ^0.18.1
 
-  # FIrebae
+  # URL Launcher
+  url_launcher: ^6.1.11
+
+  # Firebae
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   cloud_firestore: ^4.7.1
   firebase_storage: ^11.2.4
+  firebase_messaging: ^14.6.4
+  firebase_analytics: ^10.4.3
+
+  # Notification
+  flutter_local_notifications: ^15.0.0
 
   # Google SignIN
   google_sign_in: ^6.1.2
